# textile-detect-gui

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  MainWindow.cpp  MainWindow.h  logger.h  main.cpp
